# fossilrepo

./: .dockerignore  .env.deploy.example  .env.example  .env.production.example  .gitignore  .scuttlebot.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ecr  LICENSE  Makefile  README.md  SECURITY.md  _old_CLAUDE.md  _old_bootstrap.md  boilerworks.yaml  bootstrap.md  conftest.py  docker-compose.yaml  install.sh  mkdocs.yml  pyproject.toml  run.sh  startup.py
.fossil-settings/: ignore-glob
.github/: TODO.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-ecr.yml  ci.yaml  deploy.yaml  docker.yaml  docs.yaml  promote.yaml  publish.yaml
_old_fossilrepo/cli/: main.py
_old_fossilrepo/server/: config.py  manager.py
_old_fossilrepo/sync/: mappings.py  mirror.py
accounts/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
auth1/: apps.py  forms.py  tests.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
core/: admin.py  context_processors.py  decorators.py  fields.py  models.py  pagination.py  permissions.py  sanitize.py  tests.py  url_validation.py  views.py
core/middleware/: current_user.py  trusted_auth.py
core/templatetags/: permissions_tags.py
ctl/: main.py
docker/: Caddyfile  Dockerfile.fossil  docker-compose.fossil.yml  entrypoint.ecr.sh  entrypoint.sh  fossil-shell  jupyter_server_config.py  litestream-ecs.yml  litestream.yml  sshd_config  supervisord.ecr.conf
docs/: CNAME  features.md  index.md
docs/api/: agentic-development.md  reference.md
docs/architecture/: overview.md  sync-bridge.md
docs/getting-started/: administration.md  configuration.md  first-repo.md  installation.md  prerequisites.md
fossil/: admin.py  agent_claims.py  api_auth.py  api_tokens.py  api_views.py  apps.py  branch_protection.py  chat.py  ci.py  cli.py  code_reviews.py  forum.py  github_api.py  models.py  notifications.py  oauth.py  reader.py  releases.py  signals.py  sync_models.py  tasks.py  tests.py  ticket_fields.py  ticket_reports.py  urls.py  user_keys.py  views.py  webhooks.py  workspaces.py
fossil-platform/: Dockerfile  README.md
fossil/migrations/: 0001_initial.py  0002_fossilrepository_last_sync_at_and_more.py  0003_gitmirror_historicalgitmirror_historicalsshkey_and_more.py  0004_historicalprojectwatch_notification_projectwatch.py  0005_alter_gitmirror_auth_credential_and_more.py  0006_historicalrelease_release_historicalreleaseasset_and_more.py  0007_forumpost_historicalforumpost_historicalwebhook_and_more.py  0008_apitoken_historicalapitoken_and_more.py  0009_historicalticketfielddefinition_and_more.py  0010_historicalagentworkspace_agentworkspace.py  0011_codereview_historicalcodereview_and_more.py  0012_alter_ticketclaim_unique_together.py  0013_ticketsyncmapping_wikisyncmapping.py  0014_chat_message.py
fossil/templatetags/: fossil_filters.py
items/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_alter_historicalitem_sku_alter_item_sku.py
mcp_server/: __main__.py  config.json  server.py  tools.py
organization/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
organization/migrations/: 0001_initial.py  0002_historicalteam_team.py  0003_historicalorgrole_orgrole_and_more.py
pages/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
pages/migrations/: 0001_initial.py
projects/: access.py  admin.py  forms.py  models.py  tests.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_historicalprojectgroup_projectgroup_and_more.py  0003_add_projectstar.py
scripts/: sync_to_fossil.sh
static/css/: input.css
templates/: 403.html  404.html  500.html  base.html  dashboard.html
templates/accounts/: login.html  notification_prefs.html  profile.html  profile_edit.html  profile_token_create.html  profile_token_created.html  ssh_keys.html
templates/admin/: base_site.html
templates/auth1/: login.html  ssh_keys.html
templates/email/: digest.html  notification.html
templates/fossil/: _copy_hash.html  _keyboard_help.html  _live_reload.html  _project_nav.html  api_token_create.html  api_token_list.html  branch_list.html  branch_protection_form.html  branch_protection_list.html  bundle_import.html  chat.html  checkin_detail.html  code_blame.html  code_browser.html  code_file.html  compare.html  doc_page.html  docs_index.html  explorer.html  explorer_query.html  file_history.html  forum_form.html  forum_list.html  forum_thread.html  git_mirror.html  git_mirror_delete.html  release_detail.html  release_form.html  release_list.html  repo_settings.html  repo_stats.html  search.html  shun_list.html  sync.html  tag_list.html  technote_detail.html  technote_form.html  technote_list.html  ticket_detail.html  ticket_edit.html  (+16 more)
templates/includes/: _pagination.html  _pagination_manual.html  _sidebar_project.html  nav.html  nav_public.html  sidebar.html
templates/items/: item_confirm_delete.html  item_detail.html  item_form.html  item_list.html
templates/organization/: audit_log.html  member_add.html  member_confirm_remove.html  member_list.html  role_confirm_delete.html  role_detail.html  role_form.html  role_list.html  settings.html  settings_form.html  team_confirm_delete.html  (+8 more)
tests/: test_agent_coordination.py  test_anonymous_access.py  test_api_coverage.py  test_api_tokens.py  test_audit_log.py  test_branch_protection.py  test_branch_protection_enforcement.py  test_bundle_cli.py  test_ci_status.py  test_cli.py  test_dashboard_heatmap.py  test_email_templates.py  test_explorer.py  test_forum.py  test_git_mirrors.py  test_integrations.py  test_json_api.py  test_mcp_server.py  test_notification_prefs.py  test_project_groups.py  test_releases.py  test_repo_lifecycle.py  test_roles.py  test_security.py  test_shunning.py  test_split_diff.py  test_starring.py  test_tasks_and_accounts.py  test_technotes.py  test_ticket_fields.py  test_ticket_reports.py  test_unversioned.py  test_user_management.py  test_views_coverage.py  test_webhooks.py
(+41 files in other folders)
