[project]
name = "fossilrepo"
version = "0.1.0"
description = "Omnibus-style installer for a self-hosted Fossil forge."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "celery[redis]>=5.4",
    "django-celery-results>=2.5",
    "django-celery-beat>=2.7",
    "django-import-export>=4.0",
    "django-simple-history>=3.7",
    "django-ratelimit>=4.1",
    "django-health-check>=3.18",
    "django-constance[database]>=4.1",
    "django-storages[s3]>=1.14",
    "django-ses>=4.1",
    "django-cors-headers>=4.4",
    "gunicorn>=23.0",
    "whitenoise>=6.7",
    "boto3>=1.35",
    "sentry-sdk[django]>=2.14",
    "click>=8.1",
    "rich>=13.0",
    "markdown>=3.6",
    "requests>=2.31",
    "cryptography>=43.0",
]

[project.scripts]
fossilrepo-ctl = "ctl.main:cli"

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "coverage>=7.6",
    "freezegun>=1.4",
    "pip-audit>=2.7",
]

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "auth1", "organization", "items", "projects", "pages", "fossil", "testdata", "ctl"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["core", "auth1", "organization", "items", "projects", "pages", "fossil"]
omit = ["*/migrations/*", "*/tests/*", "*/testdata/*", "manage.py", "startup.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["ctl", "core", "auth1", "organization", "items", "projects", "pages", "fossil", "config"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
